fixes #2232. Spacing can be now be adjusted, even if spacing is not set from server side
svn changeset:6012/svn branch:trunk

--- a/WebContent/ITMILL/themes/default/gridlayout/gridlayout.css
+++ b/WebContent/ITMILL/themes/default/gridlayout/gridlayout.css
@@ -16,11 +16,20 @@
  * Spacing values used by IGridLayout. (element does not exist in DOM)
  * Use padding-left for horizontal spacing and padding-top for vertical.
  */
-.i-gridlayout-spacing {
+.i-gridlayout-spacing-on {
 	padding-left:8px;
 	padding-top:8px;
 }
+.i-gridlayout-spacing-off {
+	padding-left:0px;
+	padding-top:0px;
+}
 
+.i-gridlayout-spacing,
+.i-gridlayout-spacing-off {
+	padding-left:0px;
+	padding-top:0px;
+}
 
 .i-gridlayout {
 	overflow:hidden;
