--- a/WebContent/ITMILL/themes/default/styles.css
+++ b/WebContent/ITMILL/themes/default/styles.css
@@ -759,11 +759,20 @@ input.i-modified,
  * Spacing values used by IGridLayout. (element does not exist in DOM)
  * Use padding-left for horizontal spacing and padding-top for vertical.
  */
-.i-gridlayout-spacing {
+.i-gridlayout-spacing-on {
 	padding-left:8px;
 	padding-top:8px;
 }
+.i-gridlayout-spacing-off {
+	padding-left:0px;
+	padding-top:0px;
+}
 
+.i-gridlayout-spacing,
+.i-gridlayout-spacing-off {
+	padding-left:0px;
+	padding-top:0px;
+}
 
 .i-gridlayout {
 	overflow:hidden;
